public/stylesheets/style.css
/********************************************************************/
/************************** GENERAL STYLES **************************/
/********************************************************************/

html {
    box-sizing: border-box;
    max-width: 100%;
    height: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    font-size: 1em;
    line-height: 1.4;
    color: #222;
    overflow-x: hidden;
}

html *,
html *:before,
html *:after {
    box-sizing: inherit;
}

body {
    height: 100%;
    margin: 0;
    background: #ffffff;
    font-family: "Akkurat Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 1.6;
    font-weight: 400;
    color: #637280;
}

img,
svg {
    max-width: 100%;
}

a {
    color: inherit;
}

a:hover {
    text-decoration: none;
}

h1 {
    font-size: 40px;
    line-height: 1.3;
    font-weight: 300;
    letter-spacing: -0.015em;
    color: #2e2e7f;
}

h2 {
    font-size: 30px;
    line-height: 42px;
    font-weight: 300;
    letter-spacing: -.45px;
    color: #8da2b5;
}

[type="text"] {
    height: 52px;
    margin: 0;
    padding: 16px 15px 14px;
    border: 1px solid #dde5ed;
    border-radius: 6px;
    outline: none;
    box-shadow: none;
    background: #fafbfc;
    font-size: 16px;
    font-family: "Akkurat Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #8da2b5; 
}


.clearfix {
    clear: both;
}
.clearfix:after {
	visibility: hidden;
	display: block;
	font-size: 0;
	content: " ";
	clear: both;
	height: 0;
}




/********************************************************************/
/************************ NAVIGATION STYLES *************************/
/********************************************************************/

.nav__content {
    overflow: visible;
}

.input-small {
    padding: 9px 10px 6px;
    height: 32px;
    border-radius: 4px;
    font-size: 12px;
}

.cta__form-small .cta-email {
    width: 55%;
}




/********************************************************************/
/************************** CONTENT STYLES **************************/
/********************************************************************/

.header-spacer {
    display: block;
    height: 110px;
}
@media (max-width: 767px) and (min-width: 481px) {
    .header-spacer {
        height: 110px;
    }
}
@media (max-width: 480px) {
    .header-spacer {
        height: 100px;
    }
}

.cta-email {
    float: left;
    width: 60%;
    border-right-width: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
@media (max-width: 580px) {
    .cta-email {
        width: 100%;
        text-align: center;
        border-right-width: 1px;
        border-radius: 4px;
    }
}

.cta-submit {
    display: inline-block;
    position: relative;
    float: left;
    width: 40%;
    height: 52px;
    margin: 0;
    padding: 15px 0 14px;
    border: 1px solid #1271c4;
    border-radius: 0 6px 6px 0;
    text-align: center;
    font-family: "Akkurat Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 1.4;
    font-weight: 500;
    letter-spacing: .01em;
    white-space: nowrap;
    text-transform: capitalize;
    text-decoration: none;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    outline: none;
    box-shadow: none;
    background: linear-gradient(to bottom, #1f8ded 0%, #1985e3 100%);
    color: #ffffff;
}
@media (max-width: 580px) {
    .cta-submit {
        width: 100%;
        margin-top: 14px;
        border-radius: 4px;
    }
}



/********************************************************************/
/*********************** HERO CTA LEFT STYLES ***********************/
/********************************************************************/


.hero-cta-left {
    position: relative;
    margin-bottom: 80px;
    padding-top: 30px;
    clear: both;
}

.hero-cta-left .image-background {
    position: absolute;
    left: 45%;
    right: 0;
    width: 55%;
    height: 520px;
    margin-top: -4%;
    z-index: -1;
    background-repeat: no-repeat;
    background-position: left top;
    background-size: 1372px 100%;
}

.hero-cta-left .image-background.mobile-visible {
    display: none;
}

.hero-cta-left .hero-content {
    max-width: 1200px;
    padding: 0 20px;
    margin: 30px auto;
    min-height: 430px;
}

.hero-cta-left .hero-container {
    display: block;
    margin-right: -20px;
    margin-left: -20px;
}

.hero-cta-left .hero-info {
    position: relative;
    top: -50px;
    width: 50%;
    z-index: 2;
    padding: 1px 20px 0;
}

.hero-cta-left .hero-info h1 {
    margin: -11px -50px 24px 0;
    padding-left: 50px;
}

.hero-cta-left .hero-info h2 {
    max-width: 500px;
    margin: 24.9px 0 20px;
    padding-left: 50px;
}

.hero-cta-left .hero-form {
    max-width: 470px;
    margin: 50px 100px 15px 50px; 
    overflow: auto;
}

.hero-cta-left .below-form {
    margin-left: 50px;
}

.hero-cta-left .info-list {
    padding: 0 5px;
    font-size: 12px;
    font-weight: 400;
    color: #8da2b5;
}

.hero-cta-left .info-list::before {
    content: '•';
    position: relative;
    left: -6px;
}

.hero-cta-left .info-list:first-child {
    padding-left: 0;
}

.hero-cta-left .info-list:first-child::before {
    display: none;
}

.hero-cta-left .hero-image {
    position: relative;
    float: left;
    width: 50%;
    min-height: 1px;
    padding-left: 20px;
    padding-right: 20px;
    text-align: right;
}

.hero-cta-left .hero-image img {
    position: relative;
}

/********* HERO CTA LEFT MEDIA QUERIES **********/
@media (min-width: 1260px) {
    .hero-cta-left .hero-info {
        left: -50px;
    }
}


@media (max-width: 1200px) {
    .hero-cta-left .hero-info {
        top: 0;
    }
}
/* ... */

